--- a/portfolio.html
+++ b/portfolio.html
@@ -1,74 +1,175 @@
 <!DOCTYPE html>
 <html>
+    <style type = "text/css">
+        body,html {
+            font-size: xx-large;
+            font-family: 'Raleway', sans-serif;
+            height:100vh;
+            margin: 0;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
+        }
+        .banner {
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("attempt.jpg");
+            height: 75.1vh;
+            background-position-x: 50%;
+            background-position-y: 60%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+        .banner-text {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            z-index: 0;
+        }
+        li {
+            display: inline-block;
+            padding-left: 1.5rem;
+            padding-right: 1.5rem;
+            margin: 0;
+        }
+        ul {
+            margin-top: -1.5rem;
+            background-color: lightskyblue;
+            width: 100%;
+            border: none;
+            text-align: center;
+        }
+        #topButton {
+            display: none;
+            position: fixed;
+            bottom: 2rem;
+            right: 3rem;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: #FF4136;
+            color: white;
+            cursor: pointer;
+            padding: 1rem;
+            border-radius: 1rem;
+            font-size: 1rem;
+            transition: padding 0.3s;
+        }
+        #topButton:hover {
+            padding: 1.3rem;
+        }
+        .icon {
+            height: 2.5rem;
+            width: 2.5rem;
+            border: none;
+        }
+        .minicon {
+            height: 1rem;
+            width: 1rem;
+            border:none;
+        }
+        .propic {
+            height: 12rem;
+            width: 13rem;
+            border: none;
+        }
+        #headbar {
+            padding: 0.5rem 0.5rem;
+            position: sticky;
+            word-spacing: 0.5rem;
+            top: 0;
+            z-index: 1;
+            background: #3d9970;
+            color:aliceblue;
+        }
+        .project {
+            margin-top: -1.375rem;
+            position:relative;
+            height: 92.6vh;
+            background-color:antiquewhite;
+        }
+    </style>
 
+    <script type="text/javascript">
+        window.onscroll = function() {handleScroll()};
+
+        function handleScroll() {
+            if(document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("topButton").style.display = "block";
+            } else {
+                document.getElementById("topButton").style.display = "none";
+            }
+        }
+
+        function toTop() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+
+        function goTo(section) {
+            if(section == "discord") {
+                document.body.scrollTop = 1000;
+                document.documentElement.scrollTop = 1000;
+            }
+        }
+    </script>
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
     <title>Softfair</title>
-
-    <style type = "text/css">
-    
-        h1 {
-            background-image: url("tropicalmountains.jpg");
-            height: 10rem;
-            width: 100%;
-            color: ivory;
-            margin-bottom: -5rem;
-        }
-
-        body {
-            margin-top: -3rem;
-            margin-left: 0rem;
-            margin-right: 0rem;
-            font-size: xx-large;
-            font-family: 'Raleway', sans-serif;
-            background-color: white;
-            text-align: center;
-        }
-        div {
-            margin: 5rem;
-            margin-bottom: 0rem;
-        }
-        p {
-            background-image: url("tropicalmountains.jpg");
-            background-position: bottom;
-            color: ivory;
-            margin-top: 21.05rem;
-            margin-bottom: -5rem;
-            font-size: xx-large;
-            text-shadow: 0.1rem 0.1rem mediumseagreen;
-        }
-    
-    </style>
-    <h1>
-        <!--image banner-->
-    </h1>
 </head>
 <body>
-    <div>
-        <b>FILLER TEXT</b>
-        <br> Not many pass my test.
-        <br> Some say they won't let their past follow them.
-        <br><strong>LET US PUT IT TO THE TEST.</strong>
-        <br><a href="Resume.pdf">My Resume</a>
-        <br><br><br><br>
-        Some projects I've worked on:
-    </div>
-
-    <ul>
-        <li style="display:inline-block; padding:0.5rem;">
-            <a href="https://discord.gg/Cg3QScw" title="Discordbot" target="_blank">
-                <img src="discordicon.png" alt="Discordbot"
-                style="width: 5rem; height:5rem; border:0">
+    <div id="headbar">
+        <li style="float:right">
+            <a href="https://github.com/SangMNguyen" title="Github">
+                <img class="minicon" src="githubLight.png" alt="Github" />
             </a>
         </li>
-        <li style="display:inline-block; padding:0.5em;">
-            <a href="hehe.mp4" title="Pong">
-                <img src="pong.png" alt="Pong"
-                style="width: 5rem; height: 5rem; border:0">
+        <li style="">
+            <a href="Resume.pdf" title="Resume">
+                <img style="height: 1rem" src="resumeicon.png" alt="Resume" />
+            </a>
+        </li>
+    </div>
+
+    <div class="banner">
+        <div class="banner-text">
+            <img class="propic" src="me.jpg" alt="Picture of Sang"/>
+            <h1 style="font-size: 3rem; margin-top: 0rem;">SANG M. NGUYEN</h1>
+            <p style="margin-top: -2rem;">I write scripts and I also write scripts.</p>
+        </div>
+    </div>
+
+    <button id="topButton" title="Go back to the Top" onclick="toTop()">Top</button>
+
+    <ul style="padding: 0.375rem; position: relative">
+        <h1 style="margin-top: -0.3rem;">Some Projects I've Worked On:</h1>
+        <li>
+            <a href="javascript:void(0)" title="Discordbot" onclick="goTo('discord')">
+                <img class="icon" src="discordicon.png" alt="Discordbot"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/SangMNguyen/Pong" title="Pong">
+                <img class="icon" src="pong.png" alt="Pong"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/SangMNguyen/MusicApp" title="MusicApp">
+                <img class="icon" src="musicsymbol.png" alt="MusicApp"/>
+            </a>
+        </li>
+        <li>
+            <a href="https://web.njit.edu/~sn424/cs490.html" title="Exam Manager">
+                <img class="icon" src="Test.png" alt="Exam Manager" />
             </a>
         </li>
     </ul>
+
+    <div class="project">
+        <h1> FILLER </h1>
+    </div>
 </body>
 
 </html>
