Made Appearing Animation Smoother
- Also added icons on the header bar for easier navigation

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,8 @@
             position: relative;
         }
         #topButton {
-            display: none;
+            opacity: 0;
+            transform: scale(0);
             position: fixed;
             bottom: 2rem;
             right: 3rem;
@@ -63,7 +64,9 @@
             padding: 1rem;
             border-radius: 1rem;
             font-size: 1rem;
-            transition: padding 0.3s;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            transition: 0.3s;
         }
         #topButton:hover {
             padding: 1.3rem;
@@ -72,6 +75,8 @@
             height: 2.5rem;
             width: 2.5rem;
             border: none;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s
         }
         .icon:hover {
@@ -79,12 +84,16 @@
             margin-right: -0.5rem;
             height: 3rem;
             width: 3rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition:0.3s;
         }
         .minicon {
             height: 1rem;
             width: 1rem;
             border:none;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         .minicon:hover {
@@ -92,6 +101,8 @@
             margin-left: -0.2rem;
             height: 1.2rem;
             width: 1.2rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         #resume {
@@ -99,6 +110,8 @@
             left: 1rem;
             top: 0.5rem;
             height: 1rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         #contactinfo {
@@ -106,14 +119,20 @@
             left: 6rem;
             top: 0.5rem;
             height: 1rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         #resume:hover, #contactinfo:hover, .githlink:hover {
             height: 1.2rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         .githlink {
             height: 1rem;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         .propic {
@@ -124,6 +143,8 @@
         }
         #headbar {
             padding: 0.5rem 0.5rem;
+            display: flex;
+            flex-direction: row;
             position: sticky;
             position: -webkit-sticky;
             min-height: 1.2rem;
@@ -131,6 +152,17 @@
             z-index: 99;
             background: #3d9970;
             color:aliceblue;
+        }
+        #icons {
+            transform: scale(0);
+            flex: 1; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            opacity: 0;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            transition: 0.3s;
         }
         .project {
             margin-top: -1rem;
@@ -189,6 +221,8 @@
             right: 10rem;
             bottom: 5rem;
             padding: 0.5rem;
+            -webkit-transition: 0.5s;
+            -moz-transition: 0.5s;
             transition: 0.5s;
         }
         .backButton {
@@ -196,10 +230,14 @@
         }
         .backButton:hover {
             padding-right: 1rem;
+            -webkit-transition: 0.5s;
+            -moz-transition: 0.5s;
             transition: 0.5s;
         }
         .nextButton:hover {
             right: 9.5rem;
+            -webkit-transition: 0.5s;
+            -moz-transition: 0.5s;
             transition: 0.5s;
         }
         .nextButton:after {
@@ -280,10 +318,14 @@
             border-radius: 10%;
             color: #EDF5E1;
             background-color: #379683;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
         #send:hover {
             background-color: #5CDB95;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
             transition: 0.3s;
         }
 
@@ -314,26 +356,54 @@
 </head>
 <body>
     <div id="headbar">
-        <li class="baricon">
-            <a href="Resume.pdf" title="Resume" target="_blank">
-                <img src="assets/resumeicon.png" alt="Resume" id="resume"/>
-            </a>
-        </li>
-        <li class="baricon">
-            <a href="#contact" title="Contact Information">
-                <img src="assets/contacticon.png" alt="Contact" id="contactinfo" />
-            </a>
-        </li>
-        <li class="baricon" style="float: right">
-            <a href="https://www.linkedin.com/in/sangmnguyen" title="LinkedIn" target="_blank">
-                <img class="minicon" src="assets/linkedin.png" alt="LinkedIn Profile">
-            </a>
-        </li>
-        <li class="baricon" style="float:right">
-            <a href="https://github.com/SangMNguyen" title="Github" target="_blank">
-                <img class="minicon" src="assets/githubLight.png" alt="Github" />
-            </a>
-        </li>
+        <div style="flex: 1; display: flex; justify-content: flex-start; align-items: center">
+            <li class="baricon">
+                <a href="Resume.pdf" title="Resume" target="_blank">
+                    <img src="assets/resumeicon.png" alt="Resume" id="resume"/>
+                </a>
+            </li>
+            <li class="baricon">
+                <a href="#contact" title="Contact Information">
+                    <img src="assets/contacticon.png" alt="Contact" id="contactinfo" />
+                </a>
+            </li>
+        </div>
+
+        <div id="icons">
+            <li class="baricon">
+                <a href="#discord" title="Discordbot">
+                    <img class="minicon" src="assets/discordicon.png" alt="Discordbot"/>
+                </a>
+            </li>
+            <li class="baricon">
+                <a href="#pong" title="Pong">
+                    <img class="minicon" src="assets/pong.png" alt="Pong"/>
+                </a>
+            </li>
+            <li class="baricon">
+                <a href="#musicapp" title="MusicApp">
+                    <img class="minicon" src="assets/musicsymbol.png" alt="MusicApp"/>
+                </a>
+            </li>
+            <li class="baricon">
+                <a href="#exam" title="Exam Manager">
+                    <img class="minicon" src="assets/Test.png" alt="Exam Manager" />
+                </a>
+            </li>
+        </div>
+
+        <div style="flex: 1; display: flex; justify-content: flex-end; align-items: center">
+            <li class="baricon">
+                <a href="https://www.linkedin.com/in/sangmnguyen" title="LinkedIn" target="_blank">
+                    <img class="minicon" src="assets/linkedin.png" alt="LinkedIn Profile">
+                </a>
+            </li>
+            <li class="baricon">
+                <a href="https://github.com/SangMNguyen" title="Github" target="_blank">
+                    <img class="minicon" src="assets/githubLight.png" alt="Github" />
+                </a>
+            </li>
+        </div>
     </div>
 
     <div class="banner">
@@ -400,7 +470,7 @@
         <h1 class="title">Pong Game</h1>
         <div class="split preview">
             <a href="https://github.com/SangMNguyen/Pong" title="Go to Github" target="_blank">
-                <img class="prevpic" src="assets/placeholder.png" alt="Pong Gameplay" />
+                <img class="prevpic" src="assets/pong.gif" alt="Pong Gameplay" />
             </a>
         </div>
     
@@ -410,7 +480,7 @@
                 my hand at. The project has the typical capabilities like singleplayer
                 mode, and 2-player mode. However, there will be an additional mechanic
                 where the player could catch, hold, and throw the ball where they'd like
-                at a higher speed than normal.
+                at a higher speed than normally.
             </p>
         </div>
         <a class="github" href="https://github.com/SangMNguyen/Pong" title="Github for Pong" target="_blank">
@@ -425,7 +495,7 @@
         <h1 class="title">Music Sharing Application</h1>
         <div class="split preview">
             <a href="https://github.com/SangMNguyen/MusicApp" title="Go to Github" target="_blank">
-                <img class="prevpic" src="assets/placeholder.png" alt="MusicApp View" />
+                <img class="prevpic" src="assets/placeholder.png" alt="MusicApp View" id="apppic" />
             </a>
         </div>
     
