--- a/portfolio.html
+++ b/portfolio.html
@@ -1,358 +1,15 @@
 <!DOCTYPE html>
 <html>
     <style type = "text/css">
-        body,html {
-            font-size: 1.666666vw;
-            font-family: 'Raleway', sans-serif;
-            margin: 0;
-            margin-right: 0.5rem;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            scroll-behavior: smooth;
+        @viewport {
+            width: device-width;
+            zoom: 1.0;
         }
-        textarea {
-            resize: none;
+        @-ms-viewport {
+            width: device-width;
         }
-        .banner {
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("assets/attempt.jpg");
-            height: 23.5rem;
-            background-position-x: 50%;
-            background-position-y: 60%;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-        }
-        .banner-text {
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            z-index: 0;
-        }
-        .baricon {
-            display: inline-block;
-            padding-right: 1.5rem;
-            padding-left: 1.5rem;
-            margin: 0;
-        }
-        .iconlist {
-            margin-top: -1.5rem;
-            background-color: #3D9970;
-            width: 100%;
-            border: none;
-            padding-bottom: 3rem;
-            z-index: 1;
-            text-align: center;
-            padding: 0.375rem; 
-            position: relative;
-        }
-        #topButton {
-            opacity: 0;
-            transform: scale(0);
-            position: fixed;
-            bottom: 2rem;
-            right: 3rem;
-            z-index: 99;
-            border: none;
-            outline: none;
-            background-color: #FF4136;
-            color: white;
-            cursor: pointer;
-            padding: 1rem;
-            border-radius: 1rem;
-            font-size: 1rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        #topButton:hover {
-            padding: 1.3rem;
-            bottom: 1.85rem;
-            right: 2.85rem;
-        }
-        .icon {
-            height: 2.5rem;
-            width: 2.5rem;
-            border: none;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s
-        }
-        .icon:hover {
-            margin-top: -0.5rem;
-            margin-right: -0.5rem;
-            height: 3rem;
-            width: 3rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition:0.3s;
-        }
-        .minicon {
-            height: 1rem;
-            width: 1rem;
-            border:none;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        .minicon:hover {
-            margin-bottom: -0.2rem;
-            margin-left: -0.2rem;
-            height: 1.2rem;
-            width: 1.2rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        #resume {
-            position: absolute;
-            left: 1rem;
-            top: 0.5rem;
-            height: 1rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        #contactinfo {
-            position: absolute;
-            left: 6rem;
-            top: 0.5rem;
-            height: 1rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        #resume:hover, #contactinfo:hover, .githlink:hover {
-            height: 1.2rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        .githlink {
-            height: 1rem;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        .propic {
-            height: 12rem;
-            width: 15rem;
-            border: none;
-            border-radius: 10%;
-        }
-        #headbar {
-            padding: 0.5rem 0.5rem;
-            display: flex;
-            flex-direction: row;
-            position: sticky;
-            position: -webkit-sticky;
-            min-height: 1.2rem;
-            top: 0;
-            z-index: 99;
-            background: #3d9970;
-            color:aliceblue;
-        }
-        #icons {
-            transform: scale(0);
-            flex: 1; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            opacity: 0;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        .project {
-            margin-top: -1rem;
-            position:relative;
-            height: 33rem;
-            background-color:antiquewhite;
-        }
-        .title {
-            text-align: center; 
-            margin: 0rem; 
-            padding-top: 4rem; 
-            font-size: 2.5rem;
-        }
-        .split {
-            position: absolute;
-            width: 50%;
-            text-align: center;
-            top: 47.5%;
-            transform: translateY(-50%);
-            z-index: 1;
-        }
-        .prevpic {
-            height: 15rem;
-            width: 17rem;
-            padding-right: 1rem;
-            float: right;
-        }
-        .preview {
-            left: 0rem;
-            border-right: 0.1rem solid currentColor;
-        }
-        .descrip {
-            right: 0rem;
-        }
-        .desctools {
-            text-align: left; 
-            float: left; 
-            padding-left: 1rem; 
-            margin-bottom: 0.4rem; 
-            margin-top: -1.4rem;
-        }
-        .desctext {
-            float: left;
-            padding-left: 1rem;
-            list-style-type: none;
-            text-align: left;
-            margin-right: 10rem;
-        }
-        .github {
-            position: absolute;
-            bottom: 9.5rem;
-            left: 30.5rem;
-        }
-        .nextButton, .backButton {
-            position: absolute;
-            cursor: pointer;
-            background-color: inherit;
-            text-decoration: none;
-            color: inherit;
-            font: inherit;
-            border: none;
-            outline: none;
-            right: 10rem;
-            bottom: 5rem;
-            padding: 0.5rem;
-            -webkit-transition: 0.5s;
-            -moz-transition: 0.5s;
-            transition: 0.5s;
-        }
-        .backButton {
-            right: 18rem;
-        }
-        .backButton:hover {
-            padding-right: 1rem;
-            -webkit-transition: 0.5s;
-            -moz-transition: 0.5s;
-            transition: 0.5s;
-        }
-        .nextButton:hover {
-            right: 9.5rem;
-            -webkit-transition: 0.5s;
-            -moz-transition: 0.5s;
-            transition: 0.5s;
-        }
-        .nextButton:after {
-            content: ' \00bb';
-        }
-        .backButton:before {
-            content: '\00ab  ';
-        }
-        #discord {
-            background-color: #7289DA;
-            color: #FFFFFF;
-        }
-        #pong {
-            background-color: black;
-            color: #00FF40;
-        }
-        #musicapp {
-            background-color: #393F4D;
-            color: #FEDA6A;
-        }
-        #exam {
-            background-color: #3A4660;
-            color: #C9AF98;
-        }
-        #contact {
-            margin-top: -1.25rem;
-            position: relative;
-            text-align: center;
-            padding-top: 1rem;
-            height: 22.5rem;
-            color: #EDF5E1;
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("assets/background3.jpg");
-            background-position-x: 50%;
-            background-position-y: 65%;
-            background-attachment: fixed;
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        input, #message {
-            background: inherit;
-            width: 10rem;
-            padding: 0.75rem;
-            border: none;
-            border-bottom: 0.01rem solid #FFFFFF;
-            outline: none;
-            color: #5CDB95;
-            font-family: 'Raleway', 'sans-serif';
-            font-size: 1.5vh;
-        }
-        ::placeholder {
-            color: #5CDB95;
-            opacity: 1;
-        }
-        :-ms-input-placeholder {
-            color: #5CDB95;
-        }
-        ::-ms-input-placeholder {
-            color: #8EE4AF;
-        }
-        #webinfo {
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: center;
-            align-items: center;
-            margin-top: -0.5rem;
-            text-align: center;
-            padding: 2rem;
-            font-size: 0.5rem;
-            height: 3.5vh;
-            color: #9A9EAB;
-            background-color: #5D535E;
-        }
-        #send {
-            font-family: 'Raleway', 'sans-serif';
-            font-size: 1.5vh;
-            padding: 1vh;
-            border: none;
-            outline: none;
-            border-radius: 10%;
-            color: #EDF5E1;
-            background-color: #379683;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-        #send:hover {
-            background-color: #5CDB95;
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-        }
-
-        input:-webkit-autofill,
-        input:-webkit-autofill:hover, 
-        input:-webkit-autofill:focus
-        textarea:-webkit-autofill,
-        textarea:-webkit-autofill:hover
-        textarea:-webkit-autofill:focus,
-        select:-webkit-autofill,
-        select:-webkit-autofill:hover,
-        select:-webkit-autofill:focus {
-            border-bottom: 0.01rem solid #FFFFFF;
-            -webkit-text-fill-color: #5CDB95;
-            color: #5CDB95;
-            transition: background-color 5000s ease-in-out 0s;
+        @-o-viewport {
+            width: device-width;
         }
     </style>
 
@@ -362,12 +19,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 320px) and (max-device-width: 768px)" href="mobile.css"/>
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 769px)" href="desktop.css"/>
 
     <title>Projection</title>
 </head>
 <body>
     <div id="headbar">
-        <div style="flex: 1; display: flex; justify-content: flex-start; align-items: center">
+        <div id="headLeft">
             <li class="baricon">
                 <a href="Resume.pdf" title="Resume" target="_blank">
                     <img src="assets/resumeicon.png" alt="Resume" id="resume"/>
@@ -403,7 +62,7 @@
             </li>
         </div>
 
-        <div style="flex: 1; display: flex; justify-content: flex-end; align-items: center">
+        <div id="headRight">
             <li class="baricon">
                 <a href="https://www.linkedin.com/in/sangmnguyen" title="LinkedIn" target="_blank">
                     <img class="minicon" src="assets/linkedin.png" alt="LinkedIn Profile">
@@ -428,7 +87,7 @@
     <button id="topButton" title="Go back to the Top" onclick="toTop()">Top</button>
 
     <ul class="iconlist">
-        <h1 style="margin-top: -0.3rem; margin-bottom: 0.75rem; color: white; font-size: 2rem;">Click on the Icons to See Some Projects!</h1>
+        <h1 id="iListTitle">on the Icons to See Some Projects!</h1>
         <li class="baricon">
             <a href="#discord" title="Discordbot">
                 <img class="icon" src="assets/discordicon.png" alt="Discordbot"/>
@@ -461,14 +120,13 @@
         </div>
 
         <div class="split descrip">
-            <p class="desctools" style="margin-top: -0.3rem;">Created with: Javascript, Node.js, Discord.js</p>
+            <p class="desctools">Created with: Javascript, Node.js, Discord.js</p>
             <p class="desctext">
-                Discord is an online communication application (like Skype) that offers
-                bots to entertains users in a server or help a server adminstrator or
-                owner manage their server. Admittedly, most bots lack a certain component
-                so most Discord servers have multiple bots. I intend to create an
-                all-purpose bot that that boasts a bountiful array of Entertainment 
-                and Utility functionalities.
+                Discord is an online communication application that offers bots to entertain 
+                users in a server or aid server adminstrators. The current iteration of bots 
+                only hold certain utilities, requiring multiple per server to achieve certain 
+                goals. I am in the process of creating an all-purpose bot that that boasts a 
+                bountiful array of Entertainment and Utility functionalities.
             </p>
         </div>
         <a class="github" href="https://github.com/SangMNguyen/DiscordBot" title="Github for Bot" target="_blank">
@@ -539,7 +197,7 @@
         </div>
     
         <div class="split descrip">
-            <p class="desctools" style="margin-bottom: 2rem; margin-top: -3rem;">Created with HTML, Javascript, PHP, MySQL</p>
+            <p class="desctools">Created with HTML, Javascript, PHP, MySQL</p>
             <p class="desctext">
                 The Exam Manager is a web application which functions as a platform for
                 teachers to create exams and students to take the exams and receive grades.
@@ -575,7 +233,7 @@
 
     <section id="webinfo">
         <a title="NJIT Official Website" href="https://www.njit.edu/" style="color: inherit; flex-basis: 13rem;" target="_blank">Courtesy of New Jersey Institute of Technology</a>
-        <p style="flex-basis: 7.5rem; border-left: 0.01rem solid currentColor; border-right: 0.01rem solid currentColor">Design by Sang Nguyen</p>
+        <p style="flex-basis: 10rem; border-left: 0.01rem solid currentColor; border-right: 0.01rem solid currentColor">Photos & Design by Sang Nguyen</p>
         <a title="Website Code" href="https://github.com/SangMNguyen/Website" style="color: inherit; flex-basis: 7.5rem;" target="_blank">Github Link for Website</a>
     </section>
 </body>
