--- a/portfolio.html
+++ b/portfolio.html
@@ -164,11 +164,10 @@
             <p class="desctools">Created with: HTML, Javascript</p>
             <button class="descBut" onclick="seeDesc('pong')">More Info</button>
             <p class="desctext">
-                Pong, being one of the first video games, was something I thought I should try
-                my hand at. The project has the typical capabilities like singleplayer
-                mode, and 2-player mode. However, there will be an additional mechanic
-                where the player could catch, hold, and throw the ball where they'd like
-                at a higher speed than normally.
+                The goal of the Pong project was to understand the structure of a game, and the use of HTML
+                Canvas. Additionally, the project offers two types of Pong, Classic and my own rendition of
+                the game, Power Pong, which features new mechanics. It offers Local Play and support for 1-2
+                players.
             </p>
             <button class="descExit" onclick="closeDesc('pong')">&times;</button>
             <a class="github" href="https://github.com/SangMNguyen/Pong" title="Github for Pong" target="_blank">
@@ -192,11 +191,9 @@
             <p class="desctools">Created with: Javascript, React Native, Firebase</p>
             <button class="descBut" onclick="seeDesc('musicapp')">More Info</button>
             <p class="desctext">
-                I love listening to and sharing music, however I often see that the platforms
-                that provide those things are missing some desired functions. That is the 
-                motivation of this project. The project will give the users full-control of 
-                their playlists and queue, offer communities to aid in discovery of music, a 
-                sharper search process, and more.
+                The goals of this project is to create a Music Sharing Platform where users can connect to
+                each other, share and discover new music from each other from any other platform, form 
+                communities, and become a better tool to enjoy music.
             </p>
             <button class="descExit" onclick="closeDesc('musicapp')">&times;</button>
             <a class="github" href="https://github.com/SangMNguyen/MusicApp" title="Github for MusicApp" target="_blank">
