--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, height=device-height, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 320px) and (max-device-width: 768px)" href="mobile.css"/>
     <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 769px)" href="desktop.css"/>
@@ -95,9 +95,6 @@
             </li>
         </div>
     </div>
-    
-    <!-- Quick Fix for Mobile -->
-    <div id="mobileFill"></div>
 
     <div class="banner">
         <div class="banner-text">
